<resources>
    <string name="app_name">Shoe Store Inventory</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="girl_looking_at_the_phone">Girl looking at the phone</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email/User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_message">Thanks for signing up! 🎉</string>
    <string name="next">Next</string>
    <string name="group_welcoming_each_other">Group welcoming each other</string>
    <string name="people_shopping">People shopping</string>
    <string name="products_from_worldwide">Products from worldwide</string>
    <string name="dummy_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="add_action_button">Navigate to shoe details</string>
    <string name="shoes_list">Shoes list</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="no_shoes">No shoes were found. Please add some.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>