<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.udacity.shoestoreinventory.converters.DoubleConverter" />

        <variable
            name="viewModel"
            type="com.udacity.shoestoreinventory.features.shoes.ShoesViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:context=".features.shoe_details.ShoeDetailsFragment">

        <!--
Constraints layout to use the power of chaining
 and layout the screen components relatively
 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <TextView
                android:id="@+id/show_details_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/shoe_details"
                android:textSize="48sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/shoe_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/shoe_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@={viewModel.shoe.name}"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_details_text" />

            <EditText
                android:id="@+id/company_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/company"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@={viewModel.shoe.company}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit_text" />

            <EditText
                android:id="@+id/shoe_size_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/shoe_size"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@={DoubleConverter.doubleToString(viewModel.shoe.size)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company_edit_text" />

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@={viewModel.shoe.description}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
