<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestoreinventory.models.Shoe" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">


        <!--Layout shoe details vertically
        with no need for constraints-->

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/shoe_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/shoe_name"
                android:text="@{@string/shoe_name +`: `+ shoe.name}" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/company_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"
                android:text="@{@string/company+`: `+shoe.company}" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/shoe_size_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_size"
                android:text="@{@string/shoe_size+`: `+Double.toString(shoe.size)}" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:text="@{@string/description+`: `+shoe.description}" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>